[gd_scene load_steps=2 format=3 uid="uid://caxy8pxdp4ks7"]

[ext_resource type="Script" uid="uid://caf7xu4qg5gxc" path="res://Objects/Battle/Units/Components/MoveComponent.gd" id="1_g8rsp"]

[node name="MoveComponent" type="Node" groups=["uses_navigation"]]
script = ExtResource("1_g8rsp")

[node name="Line2D" type="Line2D" parent="."]
z_as_relative = false

[node name="TimerChase" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="TimerChase" to="." method="_on_timer_chase_timeout"]
